--- a/Latex/ReportAG.tex
+++ b/Latex/ReportAG.tex
@@ -404,7 +404,7 @@ currentMat = currentMat * glm::rotate(joints[i].getZRotAngle(), zAxis)
 		* glm::translate(glm::vec3(bones[i].getLength(), 0, 0));
 \end{lstlisting}
 
-One of the objectives was to have controllable slow in and slow out motion at the start and end of each simulation. This was achieved by normaloising the total change in the change of the tip position. The change was scaled linearly, see Figure~\ref{fig:scaling}. \\
+One of the objectives was to have controllable slow in and slow out motion at the start and end of each simulation. This was achieved by normalising the total change in the change of the tip position. The change was scaled linearly, see Figure~\ref{fig:scaling}. \\
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.5]{SpeedDiagram}
