--- a/Latex/ReportAG.tex
+++ b/Latex/ReportAG.tex
@@ -89,15 +89,15 @@ In this project we explore the application of inverse kinematics to the control 
 \begin{figure}
 \centering
 \includegraphics[scale=0.4]{chain3Dexamplev2}
-\caption{Final three dimensional simulation with the trace and a star showing the goal position.}
+\caption{Final three-dimensional simulation in OpenGL, complete with the trace showing the motion of the end-effector, and a star signifying the goal position.}
 \label{fig:3Dpicture}
 \end{figure}
 
 Kinematics refers to the methodological study of movement, encompassing all the geometrical properties of motion. The motion or trajectory of an object in space can be described using either forward or inverse kinematics. The former uses known angles between parts of the object to determine the coordinates of the end-effector, while the latter uses a known final position of the end-effector to calculate the angles between the parts which ensure that the object reaches this desired target position. \\
 
-Whilst the subject of inverse kinematics is applicable to many diverse areas, including astrophysics and robotics, this project is primarily concerned with its application to the fields of animation and computer graphics. Why is IK interesting? Why is it hard?\\
+Whilst the subject of inverse kinematics is applicable to many diverse areas, including astrophysics and robotics, this project is primarily concerned with its application to the fields of animation and computer graphics. And despite its prevalence is many different fields, inverse kinematics remains an interesting and difficult problem to solve. Inverse kinematics has garnered significant research and interest because it is much more intuitive than forward kinematics, especially for animators, where it is more desirable to define an end position and work out the required angles to get there. Yet it is challenging because many solutions can exist. \\
 
-This report begins with a brief account of the main objectives of the project and then proceeds to discuss important previous related work, including an overview of some of the most commonly used methods of approaching the inverse kinematics problem. Following this, the procedure of our investigation is explained, describing the different methods that were explored. Moreover, some of the issues that were encountered are discussed, including problems concerning both the computational and the implementation aspects, and how these problems were addressed. We then go on to discuss the simulation implementation of the proposed linkage system in Matlab, and the computational methods that were explored for solving the inverse kinematics problem. Carrying out an initial simulation in Matlab enabled us to be able to set up the equations quickly, test out different methods, and discover what worked and what didn't in a simplified two-dimensional system before porting the code to the final, fully three-dimensional environment in OpenGL. We then continue by explaining in detail the operations and execution in OpenGL. The last section of this report includes a review of the performance and the limitations of the system, as well as a discussion of possible further improvements.
+This report begins with a brief account of the main objectives of the project and then proceeds to discuss previous related work, including an overview of some of the most commonly used methods of approaching the inverse kinematics problem. Following this, the procedure of our investigation is explained, describing the different methods that were explored. Moreover, some of the issues that were encountered are discussed, including problems concerning both the computational and the implementation aspects, and how these problems were addressed. We then go on to discuss the simulation implementation of the proposed linkage system in Matlab, and the computational methods that were explored for solving the inverse kinematics problem. Carrying out an initial simulation in Matlab enabled us to be able to set up the equations quickly, test out different methods, and discover what worked and what didn't in a simplified two-dimensional system before porting the code to the final, fully three-dimensional environment in OpenGL. We then continue by explaining in detail the operations and execution in OpenGL. The last section of this report includes a review of the performance and the limitations of the system, as well as a discussion of possible further improvements.
 
 \subsection{Objectives}
 
