--- a/Latex/ReportAG.tex
+++ b/Latex/ReportAG.tex
@@ -293,7 +293,7 @@ Perhaps the best way to incorporate constraints would be to use the Lagrange mul
 \subsection{ OpenGL}
 
 % 
-Our software was built on top of OpenGL version 4.3 so we can adopt the shaders introduced after 3.3 version, which uses a flexible pipeline. The following libraries are employed: 
+Our software was built on top of OpenGL version 4.3 so we can adopt the shaders introduced after version 3.3, which uses a flexible pipeline. The following libraries are employed: 
 \begin{itemize}
 \item GLFW for window managing, 
 \item GLM  for including the matrix operations and matrix-vector data types, 
@@ -303,13 +303,13 @@ Our software was built on top of OpenGL version 4.3 so we can adopt the shaders 
 The C++11 standard is used as it introduces better default thread and mutex libraries as well as other improvements. \\
 
 
-First, we consider all the necessary conversions that let us display the three-dimensional world on a two-dimensional screen surface. Initially we have the \(z\) value set to zero, and hence worked in a two-dimensional space. In our world model each object has it's own model transformation matrix M. We also have a camera matrix that defines the camera position and orientation. Lastly, a projection matrix describes the mapping of a pinhole camera which plots the three-dimensional world onto a two-dimensional screen. For every object in the scene, pixel/screen coordinates \([u, v, 1]\) are defined by multiplying the vertices of each object by the Model-View-Projection (MVP) transformation matrix which gives the position of each pixel on the screen, i.e. transformed vertex = M \(\times\) V \(\times\) P \(\times\) object vertex. \\
+First, we consider all the necessary conversions that let us display the three-dimensional world on a two-dimensional screen surface. Initially we have the \(z\) value set to zero, and hence worked in a two-dimensional plane. In our world model each object has it's own model transformation matrix M. We also have a camera matrix that defines the camera position and orientation. Lastly, a projection matrix describes the mapping of a pinhole camera which plots the three-dimensional world onto a two-dimensional screen. For every object in the scene, pixel/screen coordinates \([u, v, 1]\) are defined by multiplying the vertices of each object by the Model-View-Projection (MVP) transformation matrix which gives the position of each pixel on the screen, i.e. transformed vertex = M \(\times\) V \(\times\) P \(\times\) object vertex. \\
 
 
-%\lstset{
-%  frame=top,frame=bottom,
-%  basicstyle=\small\normalfont\sffamily,
-%  }
+\lstset{
+  frame=top,frame=bottom,
+  basicstyle=\small\normalfont\sffamily,
+  }
 %\begin{lstlisting}[float,caption=Renderer MVP calculation, label={lst:renderer}]
 %viewProjection = projection * view;
 %//Calculate Model View Projection matrix
@@ -323,7 +323,7 @@ First, we consider all the necessary conversions that let us display the three-d
 
 The initial implementation consisted of lines, squares and triangles, and an orthographic projection was used to represent the objects in two dimensions. 
 % To gain insight into the performance of our model, we included a frames per second counter which indicates how fast the scene is being rendered. In order to draw an objects, we implemented a \texttt{Drawable} class. All the objects that need to be displayed have to implement an interface defined by the \texttt{Drawable} class and possess a function called \texttt{draw}. The window draws drawable objects and does not distinguish between them. The line, square and triangle are all subclass of the VertexObject class which itself is a subclass of \texttt{Drawable}. 
-At this point we added the chain of rectangles and lines where lines represented bones and rectangles were joints. A \(4 \times 4\) rotation and translation matrices were introduced, so for each joint and at each time step the following calculation is performed:  \(\prod_{i=0}^I R_i T_i\) where \(R_i\) stands for the rotation of the joint and \(T_i\) corresponds to the translation of each bone. \\
+At this point we added a chain of rectangles and lines, where lines represented bones and rectangles were joints. Then, \(4 \times 4\) rotation and translation matrices were introduced, so for each joint and at each time step the following calculation is performed:  \(\prod_{i=0}^I R_i T_i\) where \(R_i\) stands for the rotation of the joint and \(T_i\) corresponds to the translation of each bone. \\
 
 %\begin{lstlisting}[float,caption=Drawable Class., label={lst:drawable}]
 %class VertexObject: public Drawable {
@@ -362,36 +362,38 @@ At this point we added the chain of rectangles and lines where lines represented
 %}
 %\end{lstlisting}
 
-In order to achieve a fluid and efficient rendering, we made the simulation process independent of rendering. Simulation and rendering are performed on two different threads, and have to access a shared resource concurrently. The synchronisation of these two processes is encapsulated in simulation controller class which uses three mutual exclusion lock variables. The rendering process has access to all the chain data while the simulation only uses the angles and lengths (taken from the copy of the chain) to perform the numerical calculations which advance the motion in time. \\
+In order to achieve a fluid and efficient rendering, we made the simulation process independent of rendering. Simulation and rendering are performed on two different threads, and have to access a shared resource concurrently. The synchronisation of these two processes is encapsulated in the SimulationController class which uses mutual exclusion lock variables. \\
+% The rendering process has access to all the chain data while the simulation only uses the angles and lengths (taken from the copy of the chain) to perform the numerical calculations which advance the motion in time. \\
 
-For visual appeal, we draw a trail that follows the chain tip. A circular array is used for efficient rendering; a fixed buffer is allocated on the GPU at the beginning of the simulation and we are tracking the movement of the tip of the chain. Each time the tip moves a sufficient (predetermined) amount, we record the current position and include it in the circular array. Once we run out of space, we return to the start of the array and replace the first value with the new one. Then the rendering is performed sequentially with all remaining values unchanged until we again reach the end of the array. This allows us to make only small uploads of data to he GPU. \\
+For visual appeal, we draw a trail that follows the chain tip. A circular array is used for efficient rendering; a fixed buffer is allocated on the GPU at the beginning of the simulation and we track the movement of the tip of the chain. Each time the tip moves a sufficient (predetermined) amount, we record the current position and include it in the circular array. Once we run out of space, we return to the start of the array and replace the oldest value with the new one. Then the rendering is performed sequentially with all remaining values unchanged until we again reach the end of the array. This allows us to make only small uploads of data to the GPU. \\
 
-At this stage we added the simulation code originally developed in Matlab to our the two-dimensional model, see Figure~\ref{fig:2Dpicture}. Instead of calculating the pseudo-inverse and the error, only the transpose of the Jacobian is calculated. To allow user input, we draw a triangle which could be moved using the mouse, and was used to mark the goal position. The mouse position was transformed using an inverse orthogonal projection. \\
+At this stage we added the simulation code originally developed in Matlab to our two-dimensional model, as shown in Figure~\ref{fig:2Dpicture}. Instead of calculating the pseudo-inverse and the error, only the transpose of the Jacobian is calculated. To allow user input, we draw a triangle which could be moved using the mouse, and was used to mark the goal position. The mouse position was transformed using an inverse orthogonal projection. \\
 
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.4]{chain2Dv2}
-\caption{Final two dimensional simulation with the trace and a triangle showing the goal position.}
+\caption{Final two-dimensional simulation with the trace and a triangle showing the goal position.}
 \label{fig:2Dpicture}
 \end{figure}
 
-One of the problems we faced had to do with the simulation thread accessing the rendering state, causing the software to fail if the frame rate was too high. The problem was solved by allowing the simulation to access only the simulation data. Here we also used data encapsulation; a new class, called ChainModel, was created that only had the simulation data. The Chain class is a subclass of the ChainModel and with added attributes and methods for rendering purposes. The same applies to bone and joint classes. See Figure~\ref{fig:treadhDiagram}  \\
+One of the problems we faced had to do with the simulation thread accessing the rendering state, causing the software to fail if the frame rate was too high. The problem was solved by allowing the simulation to access only the simulation data. Here we also used data encapsulation; a new class, called ChainModel, was created that only had the simulation data. The Chain class is a subclass of the ChainModel and with added attributes and methods for rendering purposes. The same applies to bone and joint classes. The communication protocol between the simulation thread and the rendering thread is displayed in Figure~\ref{fig:treadhDiagram}.  \\
 
-The simulation thread is either simulating or waiting for a new goal. It also checks when it's close to the goal and it stops at a given threshold, so the loop that updates the Jacobian matrix is not called though the simulation thread is still running. The user can input a new goal position at any time, as the simulation loop will then solve for the new goal using the current chain state.\\
+\vspace{-8mm}
+The simulation thread is either simulating or waiting for a new goal. It also checks when the end-effector is close to the goal and it stops at a given threshold. The user can input a new goal position at any time, as the simulation loop will then solve for the new goal using the current chain state.\\
 
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.4]{threadDiagram}
-\caption{Diagram showing the data communication among the simulation and the rendering thread.}
+\caption{Diagram showing the data communication among the simulation and the rendering threads.}
 \label{fig:treadhDiagram}
 \end{figure}
 
-Our final improvement involved adapting the simulation and the display to work in a three-dimensional case, see Figure~\ref{fig:3Dpicture}. We construct the chain using rectangular parallelepipeds, while the shaders implemented a Gouraud shading algorithm. 
+Our final improvement involved adapting the simulation and the display to work in a three-dimensional case, as shown in Figure~\ref{fig:3Dpicture}. We construct the chain using rectangular parallelepipeds, while the shaders implement a Gouraud shading algorithm. 
 % First, we added normal vectors to each vertex of every object; they point outwards from every vertices that is on the surface of the object, and for the vertices which are on the edges we use the mean of the neighbouring planar normals. Local illumination model combines the ambient, diffuse and specular light to give the colour intensities of the reflections, and the final shading is achieved by interpolating the vertices and normals. \\
 
 % In addition, we included keyboard input control. In the final version the user is able to control the camera angle by moving the mouse, and change the distance from the camera to the scene using the keyboard. In particular, we use the mouse to change the angle of the camera with respect to the \texttt{lookAtVector} and use the keyboard to move the camera position in a direction related to the \texttt{lookAtVector}, forward, backwards or side movements. The goal is moved using the camera position update (while right-clicking), where we update the position in the direction of the camera \texttt{lookAtVector}.\\
 
-At this stage the model was displayed in three dimensions but was still confined to moving in the plane. We added a second rotation angle resulting in a rotation with respect to the \(z\)-axis followed by a rotation with respect to the \(y\)-axis as shown in Listing~\ref{lst:transformation}, i.e. \( \mathbf{R}_z \times \mathbf{R}_y \times \mathbf{T}\). The resulting solver is fully three-dimensional. \\
+At this stage the model was displayed in three dimensions but was still confined to moving in a two-dimensional plane. We added a second rotation angle resulting in a rotation with respect to the \(z\)-axis followed by a rotation with respect to the \(y\)-axis as shown in Listing~\ref{lst:transformation}, i.e. \( \mathbf{R}_z \times \mathbf{R}_y \times \mathbf{T}\). The resulting solver is fully three-dimensional. \\
 
 
 \begin{lstlisting}[float,caption=Update total transformation with current joint rotation and translation., label={lst:transformation}]
@@ -400,7 +402,7 @@ currentMat = currentMat * glm::rotate(joints[i].getZRotAngle(), zAxis)
 		* glm::translate(glm::vec3(bones[i].getLength(), 0, 0));
 \end{lstlisting}
 
-One of the objectives was to have controllable slow in and slow out motion at the start and end of each simulation. This was achieved by normalising the total change in the change of the tip position. The change was scaled linearly, see Figure~\ref{fig:scaling}. \\
+One of the objectives was to have controllable slow-in and slow-out motion at the start and end of each simulation. This was achieved by normalising the computed change in joint angles $\Delta \params$ at each step. The step size was then scaled linearly at the beginning of the motion to have the effect of slow-in, then kept constant, before decreasing linearly for the slow-out motion. This is shown by the speed-distance graph in Figure~\ref{fig:scaling}. As the path taken from the initial position to the goal is unknown, the interval for the slow-in/slow-out motion was chosen by examining the shortest path.\\
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.5]{SpeedDiagram}
