--- a/Latex/ReportAG.bib
+++ b/Latex/ReportAG.bib
@@ -108,3 +108,13 @@ Least Squares methods",
       url    = "http://www.math.ucsd.edu/~sbuss/ResearchWeb/ikmethods/iksurvey.pdf",
       year   = "2009 (accessed October, 2014)"
     }
+    
+    
+@mastersthesis{Bonding07,
+	author		= "Engell-Nørregård, M.P , Niebe, S.M. , 
+	Bonding, M.B",
+	title		= "Inverse Kinematics With Constraints",
+	school		= "University of Copenhagen",
+	year		= "2007",
+}
+    
