--- a/Latex/ReportAG.tex
+++ b/Latex/ReportAG.tex
@@ -89,15 +89,15 @@ In this project we explore the application of inverse kinematics to the control 
 \begin{figure}
 \centering
 \includegraphics[scale=0.4]{chain3Dexamplev2}
-\caption{Final three-dimensional simulation in OpenGL, complete with the trace showing the motion of the end-effector, and a star signifying the goal position.}
+\caption{Final three-dimensional simulation of the linkage in OpenGL, complete with a trace showing the motion of the end-effector, and a star signifying the goal position.}
 \label{fig:3Dpicture}
 \end{figure}
 
 Kinematics refers to the methodological study of movement, encompassing all the geometrical properties of motion. The motion or trajectory of an object in space can be described using either forward or inverse kinematics. The former uses known angles between parts of the object to determine the coordinates of the end-effector, while the latter uses a known final position of the end-effector to calculate the angles between the parts which ensure that the object reaches this desired target position. \\
 
-Whilst the subject of inverse kinematics is applicable to many diverse areas, including astrophysics and robotics, this project is primarily concerned with its application to the fields of animation and computer graphics. And despite its prevalence is many different fields, inverse kinematics remains an interesting and difficult problem to solve. Inverse kinematics has garnered significant research and interest because it is much more intuitive than forward kinematics, especially for animators, where it is more desirable to define an end position and work out the required angles to get there. Yet it is challenging because many solutions can exist. \\
+Whilst the subject of inverse kinematics is applicable to many diverse areas, including astrophysics and robotics, this project is primarily concerned with its application to the fields of animation and computer graphics. And despite its prevalence is many different fields, inverse kinematics remains an interesting and difficult problem to solve. Inverse kinematics has garnered significant research and interest because it is much more intuitive than forward kinematics, especially for animators, where it is more desirable to define an end position and to then work out the required angles to get there. Yet it is a challenging problem to solve, particularly for more complex linkages, because many solutions can exist. \\
 
-This report begins with a brief account of the main objectives of the project and then proceeds to discuss previous related work, including an overview of some of the most commonly used methods of approaching the inverse kinematics problem. Following this, the procedure of our investigation is explained, describing the different methods that were explored. Moreover, some of the issues that were encountered are discussed, including problems concerning both the computational and the implementation aspects, and how these problems were addressed. We then go on to discuss the simulation implementation of the proposed linkage system in Matlab, and the computational methods that were explored for solving the inverse kinematics problem. Carrying out an initial simulation in Matlab enabled us to be able to set up the equations quickly, test out different methods, and discover what worked and what didn't in a simplified two-dimensional system before porting the code to the final, fully three-dimensional environment in OpenGL. We then continue by explaining in detail the operations and execution in OpenGL. The last section of this report includes a review of the performance and the limitations of the system, as well as a discussion of possible further improvements.
+This report begins with a brief account of the main objectives of the project and then proceeds to discuss previous related work, including an overview of some of the most commonly used methods of approaching the inverse kinematics problem. Following this, the procedure of our investigation is explained, describing the different methods that were explored. Moreover, some of the issues that were encountered are discussed, including problems concerning both the computational and the implementation aspects, and how these problems were addressed. We then go on to discuss the simulation implementation of the proposed linkage system in Matlab, and the computational methods that were explored for solving the inverse kinematics problem. Carrying out an initial simulation in Matlab enabled us to be able to set up the equations quickly, test out different methods, and discover what worked and what didn't in a simplified two-dimensional system before porting the code to the final, fully three-dimensional environment in OpenGL. We then continue by explaining in detail the operations and execution in OpenGL. The last section of this report includes a brief review of the performance and the limitations of the system, as well as a discussion of possible further improvements.
 
 \subsection{Objectives}
 
@@ -119,11 +119,11 @@ To investigate whether to model and thereby vary the flexibility of the rods.
 \section{Related Work}
 The subject of inverse kinematics has been much researched over the past 60 years. Initially, it was primarily used in the robotics industry, for example for the control of robotic arms, particularly in car manufacturing, and the problem was first formulated in mechanical engineering literature \cite{Crai55}. But it has since been adopted by the computer graphics community as a means for animating a character's pose and movement through the control of an underlying moveable skeleton. An animator will often adjoin a three-dimensional deformable model of a character to an articulated skeleton structure, with defined bones and joints with certain physical constraints, which can be moved interactively into the desired positions. This process is known as 'rigging' in animation. The issue that inverse kinematics attempts to solve is to find the set of joint configurations that produce a plausible skeleton or linkage configuration based upon a desired end-effector position. For example, in character animation, the end-effector may be the position of a hand or foot, and we want to know the required joint angles of the arm or leg which allow the end-effector to be in this position, whilst remaining physically plausible for the character. \\
 
-There are a number of well-established methods of approaching the inverse kinematics problem which can be divided into four main categories of solver: geometrical/analytical algorithms, cyclic coordinate descent (CCD), differential algorithms, and hybrid methods which combine together various aspects of the first three techniques \cite{Madd04}. Geometrical and analytical algorithms, such as by \cite{Kwan00}, \cite{Chin96} tend to be very quick because the inverse kinematics problem is essentially reduced to a single mathematical equation that only needs to be evaluated in a single step to produce a result. However, such methods have limitations, particularly for linkages with a large number of links, and so in these situations it is impractical to reduce the problem to a single-step mathematical equation. This means that in the field of character animation, geometrical/analytical techniques are less useful, but for a project such as this, where we are dealing with only a few links and a single end-effector, this could perhaps be an appropriate method. \\
+There are a number of well-established methods of approaching the inverse kinematics problem which can be divided into four main categories of solver: geometrical/analytical algorithms, cyclic coordinate descent (CCD), differential algorithms, and hybrid methods which combine together various aspects of the first three techniques \cite{Madd04}. Geometrical and analytical algorithms, such as by \cite{Chin96} and \cite{Kwan00}, tend to be very quick because the inverse kinematics problem is essentially reduced to a single mathematical equation that only needs to be evaluated in a single step to produce a result. However, such methods have limitations, particularly for linkages with a large number of links, and so in these situations it is impractical to reduce the problem to a single-step mathematical equation. This means that in the field of character animation, where we may have many links and multiple end-effectors, geometrical/analytical techniques are less useful. However, for a project such as this where we are dealing with only a few links and a single end-effector, this could perhaps be an appropriate method. \\
 
-Another approach is cyclic coordinate descent (CCD), which uses a greedy algorithm to solve for each joint in turn, and repeats this process until a satisfactory solution is found. Solvers based on this method include those by ... Although this method is relatively simple and fast, it suffers from inaccuracies. Another issue with this technique is that the joint angles are updated one at a time, which has the undesirable and unrealistic result of earlier joints moving much more than later links in the linkage. \\
+Another common approach is cyclic coordinate descent, which uses a greedy algorithm to solve for each joint in turn, and repeats this process until a satisfactory solution is found. Solvers based on this method include those by \cite{Eber01} and \cite{Wang91}. Although this method is relatively simple and fast, it suffers from inaccuracies. Another issue with this technique is that the joint angles are updated one at a time, which has the undesirable and unrealistic result of earlier joints moving by greater amounts than later links in the linkage chain. \\
 
-Differential-based techniques utilise an iterative approach that requires multiple step to reach a solution, such as those by ... Most inverse kinematics systems tend to use the Jacobian inverse method, despite the fact that this method suffers from singularity problems. The reason these techniques remain in widespread use is due to their relative ease of implementation and speed for real-time applications. Since all joint angles are updated in a single step, the linkage movements are dissipated over all the links, which results in a more realistic and pleasing movement. 
+Differential-based techniques utilise an iterative approach that requires multiple steps to reach a solution, such as those by \cite{Watt92} and \cite{Zhao94}. According to Martin F\v{e}dor  \cite{Fedor2003}, most inverse kinematics systems tend to use the Jacobian inverse method, despite the fact that this method suffers from singularity problems \cite{Bonding07}. The reason these techniques remain in widespread use is due to their relative ease of implementation and speed for real-time applications. Since all joint angles are updated in a single step, the linkage movements are dissipated over all the links, which results in a more realistic and pleasing movement. 
 
 
 
@@ -406,7 +406,7 @@ One of the objectives was to have controllable slow-in and slow-out motion at th
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.5]{SpeedDiagram}
-\caption{Diagram illustrating the linear scaling that results in slow in and slow out motion of the chain.}
+\caption{Diagram illustrating the proposed slow-in and slow-out method as the end-effect moves from it's initial position to the goal.}
 \label{fig:scaling}
 \end{figure}
 
